--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "RainyDayDrums",
-  "version": "1.0",
   "description": "A vanilla javascript exercise",
   "dependencies": {
     "ejs": "2.4.1",
     "express": "4.13.3"
+  },
+  "scripts": {
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
